@@ -2021,11 +2021,10 @@ BOOL CMergeDoc::CloseNow()
  **/
 int CMergeDoc::LoadFile(CString sFileName, int nBuffer, BOOL & readOnly, const FileTextEncoding & encoding)
 {
-	CDiffTextBuffer *pBuf;
 	CString sError;
 	DWORD retVal = FileLoadResult::FRESULT_ERROR;
 
-	pBuf = m_ptBuf[nBuffer];
+	CDiffTextBuffer *pBuf = m_ptBuf[nBuffer];
 	nBuffer == 0 ? m_filePaths.SetLeft(sFileName) : m_filePaths.SetRight(sFileName);
 
 	CRLFSTYLE nCrlfStyle = CRLF_STYLE_AUTOMATIC;
@@ -2044,7 +2043,7 @@ int CMergeDoc::LoadFile(CString sFileName, int nBuffer, BOOL & readOnly, const F
 		// If mixed EOLs are not enabled, enable them for this doc.
 		if (!GetOptionsMgr()->GetBool(OPT_ALLOW_MIXED_EOL))
 		{
-			m_bMixedEol = true;
+			pBuf->SetMixedEOL(true);
 		}
 	}
 
@@ -2713,6 +2712,17 @@ void CMergeDoc::SetDetectMovedBlocks(bool bDetectMovedBlocks)
 	GetOptionsMgr()->SaveOption(OPT_CMP_MOVED_BLOCKS, bDetectMovedBlocks);
 	m_diffWrapper.SetDetectMovedBlocks(bDetectMovedBlocks);
 	FlushAndRescan();
+}
+
+/**
+ * @brief Check if given buffer has mixed EOL style.
+ * @param [in] nBuffer Buffer to check.
+ * @return true if buffer's EOL style is mixed, false otherwise.
+ */
+bool CMergeDoc::IsMixedEOL(int nBuffer) const
+{
+	CDiffTextBuffer *pBuf = m_ptBuf[nBuffer];
+	return pBuf->IsMixedEOL();
 }
 
 void CMergeDoc::SetEditedAfterRescan(int nBuffer)
